@@ -3,10 +3,10 @@ package org.ohdsi.webapi.entity;
 import com.odysseusinc.arachne.commons.types.DBMSType;
 import com.odysseusinc.arachne.execution_engine_common.api.v1.dto.KerberosAuthMechanism;
 import org.apache.commons.io.FileUtils;
-import org.junit.After;
-import org.junit.Before;
-import org.junit.BeforeClass;
-import org.junit.Test;
+import org.junit.jupiter.api.AfterEach;
+import org.junit.jupiter.api.BeforeAll;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
 import org.ohdsi.webapi.AbstractDatabaseTest;
 import org.ohdsi.webapi.model.CommonEntity;
 import org.ohdsi.webapi.prediction.PredictionAnalysis;
@@ -43,7 +43,7 @@ public class PredictionEntityTest extends AbstractDatabaseTest implements TestCr
     private PredictionAnalysisDTO firstSavedDTO;
     private static String PLP_SPECIFICATION;
 
-    @BeforeClass
+    @BeforeAll
     public static void setPlpSpecification() throws IOException {
 
         File plp_spec = new File("src/test/resources/plp-specification.json");
@@ -52,19 +52,19 @@ public class PredictionEntityTest extends AbstractDatabaseTest implements TestCr
 
     // in JUnit 4 it's impossible to mark methods inside interface with annotations, it was implemented in JUnit 5. After upgrade it's needed
     // to mark interface methods with @Test, @Before, @After and to remove them from this class
-    @After
+    @AfterEach
     @Override
     public void tearDownDB() {
 
         plpRepository.deleteAll();
     }
 
-    @Before
+    @BeforeEach
     @Override
     public void init() throws Exception {
         TestCreate.super.init();
-        truncateTable(String.format("%s.%s", "public", "source"));
-        resetSequence(String.format("%s.%s", "public", "source_sequence"));
+        truncateTable("%s.%s".formatted("public", "source"));
+        resetSequence("%s.%s".formatted("public", "source_sequence"));
         sourceRepository.saveAndFlush(getCdmSource());
     }
 
